2024년 06월 24일 학습 내용

--- a/6강-선택자/CSS-선택자-예제.html
+++ b/6강-선택자/CSS-선택자-예제.html
@@ -10,7 +10,7 @@
         *{
 
             color: blue;
-            background: red;
+            background: green;
             
         }
 
@@ -29,6 +29,10 @@
         li{
             color: blue
         } */
+
+        ul{
+            color: red
+        }
 
     </style>
 
