6월 27일 공부 내용

--- a/2024-06-27/실습/메뉴만들기-실습-1.html
+++ b/2024-06-27/실습/메뉴만들기-실습-1.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <style>
         #nav{
-            width: 800px;
             border: 1px solid gray;
+            width: 800px;
             margin: 0 auto;
             overflow: hidden;
         }
         #nav div{
             float: left;
-            width: 150px;
-            height: 100px;
-            line-height: 100px;
-            text-align: center;
-            border-top: 1px solid #cccccc;
-            border-bottom: 1px solid #cccccc;
+            font-size: 2em;
+            width:  150px;
             margin: 5px;
-            font-size: 11.5em;
+            border-top: 1px solid gray;
+            border-bottom: 1px solid gray;
+            text-align: center;
+            line-height: 100px;
         }
+        
     </style>
 </head>
 <body>
