--- a/2024-07-01/학습정리/1일-문제2.html
+++ b/2024-07-01/학습정리/1일-문제2.html
@@ -95,9 +95,10 @@
             color: white;
             text-align: center;
         }
-        @media screen and (max-width:763px){
-        #img{
-            background-image: none;
+        @media(max-width: 1023px){
+        #notice h2{
+            display: flex;
+            flex-direction: column;
         }
     }
     </style>
